syntax = "proto3";
option java_multiple_files = true;
package ds.adeesha.cw2.grpc;

message Item {
  string id = 1;
  string name = 2;
  string description = 3;
  int32 qty = 4;
  double price = 5;
  bool isAvailable = 6;
}

message GetItemRequest {
}

message GetItemResponse {
  bool status = 1;
  repeated Item items = 2;
}

message AddItemRequest {
  Item item = 1;
  bool isSentByPrimary = 2;
}

message AddItemResponse {
  bool status = 1;
}

message RemoveItemRequest {
  string id = 1;
  bool isSentByPrimary = 2;
}

message RemoveItemResponse {
  bool status = 1;
}

message UpdateItemRequest {
  Item item = 1;
  bool isSentByPrimary = 2;
}

message UpdateItemResponse {
  bool status = 1;
}

service GetItemService {
  rpc getItems(GetItemRequest)
      returns(GetItemResponse);
}

service AddItemService {
  rpc addItem(AddItemRequest)
      returns(AddItemResponse);
}

service RemoveItemService {
  rpc removeItem(RemoveItemRequest)
      returns(RemoveItemResponse);
}

service UpdateItemService {
  rpc updateItem(UpdateItemRequest)
      returns(UpdateItemResponse);
}